# kurage

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
module/: default.nix
src/: auth.rs  client.rs  config.rs  error.rs  format.rs  main.rs  mcp.rs  output.rs
src/api/: types.rs
src/commands/: artifacts.rs  delete.rs  followup.rs  launch.rs  list.rs  logs.rs  me.rs  mod.rs  models.rs  repos.rs  status.rs  stop.rs
