[package]
name = "kurage"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Rust CLI + MCP server for Cursor Cloud Agents"
license = "MIT"
repository = "https://github.com/pleme-io/kurage"

[[bin]]
name = "kurage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
comfy-table = "7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
